--- a/klein2012/main.tex
+++ b/klein2012/main.tex
@@ -254,20 +254,18 @@ Nous souhaitons donc introduire une fonction de risque qui devrait pénaliser le
    \end{equation}
 Par défaut, définir $l(s_i,a) = 1$ si $a\neq a_i$ et $l(s_i,a_i)=0$ fonctionne bien comme le montrent les expériences (Section \ref{exp.sec}) et les critères dévelopés dans l'analyse (Section \ref{proof.sec}).\\
 
-Nous traitons le problème de l'imitation comme un problème de classification multi-classe, ce qui a déjà été envisagé (\citep{ratliff2007imitation}). Les approches existantes en prennent toutefois pas en compte la structure du PDM, notamment l'information sur les transitions entre états conditionnée par la politique de l'expert. C'est aussi pour cette raison que les approches purement supervisées ne peuvent fonctionner pour l'imitation.\\
+Nous traitons le problème de l'imitation comme un problème de classification multi-classe. Notre propose n'est cependant pas d'utiliser une approche purement supervisée. Nous ne souhaitons pas apprendre le contrôle de l'expert mais la description de la tâche qu'il effectue (la récompense). Il faut pour cela prendre en compte la structure du PDM, notamment l'information sur les transitions entre états conditionnées par la politique de l'expert.\\
 
-Comme nous l'avons vu Equation \eqref{Qmu.eqn}, l'hypothèse faite d'une représentation linéaire selon certains attributs $\psi : S\rightarrow \mathbb{R}^p$ de la fonction de récompense impose d'exprimer la fonction de qualité d'une politique en fonction de l'attribut vectoriel moyen de cette politique. Cette paramétrisation prend en compte la dynamique imposée par $\pi_E$. L'expert ne déroge pas à cette règle et notant $\mu_E$ l'attribut vectoriel moyen de l'expert nous pouvons donc faire l'hypothèse que la fonction $q$ que nous recherchons peut s'exprimer sous la forme $q(s,a) = \theta^T\mu_E(s,a)$. Le calcul de ce terme $\mu_E$ est central à notre algorithmes et nous proposons quelques solutions en sous-section \ref{calculmu.sec}. Nous pouvons donc maintenant exprimer notre risque, non plus comme une fonction de $q$, mais comme une fonction du vecteur de paramètres $\theta$, vecteur qui définit la récompense (Equation \eqref{hatRdef.eqn}).
+Comme nous l'avons vu Equation \eqref{Qmu.eqn}, l'hypothèse faite d'une représentation linéaire selon certains attributs $\psi : S\rightarrow \mathbb{R}^p$ de la fonction de récompense impose d'exprimer la fonction de qualité d'une politique en fonction de l'attribut vectoriel moyen de cette politique. Cette paramétrisation prend en compte la dynamique imposée par $\pi_E$. L'expert ne déroge pas à cette règle et notant $\mu_E$ l'attribut vectoriel moyen de l'expert nous pouvons donc faire l'hypothèse que la fonction $q$ que nous recherchons peut s'exprimer sous la forme $q(s,a) = \theta^T\mu_E(s,a)$. Le calcul de ce terme $\mu_E$ est central à notre algorithmes et nous proposons quelques solutions en sous-section \ref{calculmu.sec} Nous pouvons donc maintenant exprimer notre risque, non plus comme une fonction de $q$, mais comme une fonction du vecteur de paramètres $\theta$, vecteur qui définit la récompense (Equation \eqref{hatRdef.eqn}).
    \begin{equation}
      \label{structure.eqn}
    R_N(\theta)  = {1\over N} \sum_{i=1}^N\left(\max_a(\theta ^T \mu_E(s_i,a) + l(s_i,a)) - \theta ^T \mu_E(s_i,a_i) \right)
    \end{equation}
-   Un sous-gradient de cette expression peut se calculer à l'aide notamment de trois propriétés que nous rappelons :
-\begin{itemize}
-  \item l'opérateur de sous-gradient est linéaire,
-  \item le gradient est l'unique sous-gradient d'une fonction différentiable,
-  \item la fonction convexe, différentiable par morceaux $max_y[f(x,y)]$ définie à l'aide de la fonction différentiable $f(\cdot,y)$ admet comme l'un de ses sous-gradients l'expression $\nabla_xf(x,y^*)$ avec $y^*=\arg\max_yf(x,y)$.
-\end{itemize}
-Ainsi, l'on a :
+   Une descente de gradient devrait permettre de minimiser cette expression. Cependant, la présence de l'opérateur $\max$ rend les choses un peu plus complexes car l'expression n'est plus différentiable. Il va falloir faire appel à une généralisation plus puissante, le sous-gradient. Le sous-gradient d'une fonction convexe $f:W\rightarrow \mathbb{R}$ en $x$ est défini comme un vecteur $g$ tel que :
+\begin{equation}
+\forall x' \in W, g^T(x'-x)\leq f(x')-f(x)
+\end{equation}
+Le sous-gradient n'est pas partout unique, cependant l'unique sous-gradient d'une fonction différentiable est son gradient. Il s'agit d'un opérateur linéaire et la fonction convexe, différentiable par morceaux $max_y[f(x,y)]$ définie à l'aide de la fonction différentiable $f(\cdot,y)$ admet comme l'un de ses sous-gradients l'expression $\nabla_xf(x,y^*)$ avec $y^*=\arg\max_yf(x,y)$. En appliquant ces règles, on obtient :
 \begin{eqnarray}
 \nabla_\theta R_N(\theta) &=& {1\over N}\sum\limits_{i=1}^N\left(\mu_E(s_i,a^*_i) - \mu_E(s_i,a_i)\right)\\
 \textrm{avec } a^*_i &=& \arg\max_a(\theta ^T \mu_E(s_i,a) + l(s_i,a))
@@ -280,30 +278,24 @@ Une descente de sous-gradient sur le risque empirique produit alors la règle de
 \subsection{Calcul de $\mu_E$}
 %%%
 \label{calculmu.sec}
-Comme signalé dans la sous-section \ref{ConsiderationsTechniques.sec}, beaucoup d'algorithmes de la littérature reposent sur un calcul de l'attribut vectoriel moyen. Notre algorithme a cependant ceci de particulier qu'il ne nécessite que le calcul de $\mu_E$, l'attribut vectoriel moyen de l'expert et non le calcul répété de l'attribut vectoriel moyen d'une politique arbitraire. Une différence notable, cependant, est que nous avons besoin de connaître $\mu_E(s_i,a), \forall i= 1..N,\forall a \in A$. Cela implique d'inférer l'attribut vectoriel moyen de l'expert sur des états où celui-ci est passé, mais pour des actions qu'il n'a pas forcément choisies.\\ %Nul homme n'est jamais assez fort pour ce calcul :)
+Comme signalé dans la sous-section \ref{ConsiderationsTechniques.sec}, beaucoup d'algorithmes de la littérature reposent sur un calcul de l'attribut vectoriel moyen. Notre algorithme a cependant ceci de particulier qu'il ne nécessite que le calcul de $\mu_E$, l'attribut vectoriel moyen de l'expert et non le calcul répété de l'attribut vectoriel moyen d'une politique arbitrairement éloignée de celle de l'expert. Nous avons besoin de connaître $\mu_E(s_i,a), \forall i= 1..N,\forall a \in A$. Cela implique d'inférer l'attribut vectoriel moyen de l'expert sur des états où celui-ci est passé, mais pour des actions qu'il n'a pas forcément choisies.\\ %Nul homme n'est jamais assez fort pour ce calcul :)
 
-Cette inférence est facilité par le fait que l'attribut vectoriel moyen obéit à l'équation de Bellman. En effet, lorsque l'on écrit sa définition pour une composante $j=1..p$, on trouve :
+Cette inférence est facilitée par le fait que l'attribut vectoriel moyen obéit à l'équation de Bellman. En effet, lorsque l'on écrit sa définition pour une composante $j=1..p$, on trouve :
 \begin{equation}
-\mu_E^j(s,a) = E\left.\left[\sum\limits_{t=0}^\infty \gamma^t \psi^j(s)\right|s_0 = s, a_0 = a, \pi_E\right],
+\mu_E^j(s,a) = E[\sum\limits_{t=0}^\infty \gamma^t \psi^j(s)|s_0 = s, a_0 = a, \pi_E],
 \end{equation}
-expression qui lorsqu'on la rapproche de l'équation \eqref{Qdef.eqn} permet d'affirmer que $\mu^j_E$ est en fait la fonction de qualité de la politique $\pi_E$ vis-à-vis de la récompense définie par la $j$-ème composante du vecteur d'attributs $\psi$.\\
-
-Selon les informations disponibles, plusieurs méthodes peuvent donc être utilisées pour calculer $\mu_E$.\\
+expression qui lorsqu'on la rapproche de l'équation \eqref{Qdef.eqn} permet d'affirmer que $\mu^j_E$ est en fait la fonction de qualité de la politique $\pi_E$ vis-à-vis de la récompense définie par la $j$-ème composante du vecteur d'attributs $\psi$. Selon les informations disponibles, plusieurs méthodes peuvent donc être utilisées pour calculer $\mu_E$.\\
 
 Dans le cas idéal où le modèle est connu, le calcul exact de $\mu_E$ peut être effectué, les algorithmes de programmation dynamique peuvent également être utilisés.
 
-Dans le cas plus réaliste où les probabilités de transitions sont inconnues, on peut, si l'on dispose d'un simulateur et qu'il est possible d'interroger l'expert en un grand nombre d'états arbitraires, utiliser une simple approximation de Monte-Carlo où pour approximer
+Dans le cas plus réaliste où les probabilités de transitions sont inconnues, on peut, si l'on dispose d'un simulateur et qu'il est possible d'interroger l'expert en un grand nombre d'états arbitraires, utiliser une simple approximation de Monte-Carlo où pour approximer $\mu_E(s,a)$ (définition Equation \eqref{Qmu.eqn}) l'on utilise 
 \begin{equation}
-\mu_E(s,a) = E\left.\left[\sum\limits_{t=0}^\infty \gamma^t \psi(s)\right|s_0 = s, a_0 = a, \pi_E\right]
-\end{equation}
- l'on utilise
-\begin{equation}
-\hat\mu_E(s,a) = {1\over N}\sum\limits_{i=1}^{N}\sum\limits_{t}\gamma^t\psi(s), s_0=s, a_0=a, a_{t>0} = \pi_E(s_t).
+\hat\mu_E(s,a) = {1\over N}\sum\limits_{i=1}^{N}\{\sum\limits_{t}\gamma^t\psi(s), s_0=s, a_0=a, s_{t+1} \sim p(\cdot|s_t,\pi_E(s_t))\}.
 \end{equation}
 
-Ensuite, afin d'entrer dans le cadre où les seules données qui nous sont accessibles sont des trajectoires fournies par l'expert il est possible d'utiliser l'algorithme LSTD$\mu$ \citep{klein2011batch} dans sa version \emph{on-policy}. Cet algorithme adapte l'algorithme LSTD (\cite{bradtke1996linear}) dont il conserve les caractéritiques, notamment la capacité à effectuer le calcul en mode {\it batch}. C'est la méthode que nous illustrons dans la section \ref{exp.sec}\\
+Ensuite, afin d'entrer dans le cadre où les seules données qui nous sont accessibles sont des trajectoires fournies par l'expert il est possible d'utiliser l'algorithme LSTD$\mu$ \citep{klein2011batch} dans sa version \emph{on-policy}. Cet algorithme adapte l'algorithme LSTD (\cite{bradtke1996linear}) dont il conserve les caractéritiques, notamment la capacité à effectuer le calcul en mode {\it batch}. C'est la méthode que nous illustrons dans la section \ref{exp.sec} Le principe est d'estimer chacun des composantes de $\mu_E$ en utilisant LSTD. Certains calculs sont factorisables, donnant ainsi à LSTD$\mu$ un coût du même ordre de grandeur que celui de LSTD.\\
 
-Finalement, il est possible de travailler avec une approximation de Monte-Carlo plus fine que celle que nous venons de proposer, se basant uniquement sur les données fournies par l'expert et impliquant l'utilisation d'une heuristique pour les actions inconnues. Cela est reporté pour des travaux futurs.
+D'autres méthodes d'approximation sont envisageables, comme par exemple une approximation de Monte-Carlo moins coûteuse et moins contraignante que celle que nous venons de proposer, se basant uniquement sur les données fournies par l'expert et impliquant l'utilisation d'une heuristique pour les actions inconnues. Cela est reporté pour des travaux futurs.
 %%%%%
 \section{Analyse}\label{proof.sec}
 \subsection{Hypothèses}
@@ -344,18 +336,19 @@ est convergente vers un minimiseur $\theta^*$ de $R_N$. Ce minimiseur vérifiera
 \section{Travaux Connexes}
 \label{biblio.sec}
 %%%%%
-L'approche historique de \cite{ng2000algorithms}, ainsi que les algorithmes basés sur \cite{abbeel2004apprenticeship}, notamment \citep{syed2008apprenticeship,syed2008game, ziebart2008maximum}, approches résumées dans \cite{neu2009training} souffrent toutes de la même contrainte : la nécessité de résoudre le problème direct de manière répétée. Ces approches ont pour point commun de chercher à minimiser une métrique de la proximité entre l'attribut vectoriel moyen de l'expert et l'attribut vectoriel moyen d'une politique donnée. Par mises à jour successives du vecteur de paramètres $\theta$, la politique définie selon un critère d'optimalité dépendant de $\theta$ (c'est là qu'intervient la résolution du problème direct) va voir son attribut vectoriel moyen se rapprocher de celui de l'expert.\\
+L'approche historique de \cite{ng2000algorithms}, ainsi que par exemple \cite{abbeel2004apprenticeship,syed2008apprenticeship,syed2008game, ziebart2008maximum}, approches résumées dans \cite{neu2009training} souffrent toutes de la même contrainte : la nécessité de résoudre le problème direct de manière répétée, c'est à dire le calcul de la prolitique optimale pour n'importe quelle récompense. Ces approches ont pour point commun de chercher à minimiser une métrique de la proximité entre l'attribut vectoriel moyen de l'expert et celui d'une politique donnée. Par mises à jour successives du vecteur de paramètres $\theta$, la politique définie selon un critère d'optimalité dépendant de $\theta$ (c'est là qu'intervient la résolution du problème direct car $\theta$ spécifie la récompense) va voir son attribut vectoriel moyen se rapprocher de celui de l'expert.\\
 
-Cette résolution est très problématique, en effet trouver une politique optimisant une récompense est un sujet occupant un pan entier de la litérature. Particulièrement, l'information nécessaire à cet objectif est bien plus étendue que celle nécessaire au calcul d'uniquement l'attribut moyen de l'expert comme cela est nécessaire à notre algorithme. Comme cela est illustré en section \ref{exp.sec}, l'algorithme d'\citet{abbeel2004apprenticeship} est incapable de résoudre le problème du pendule inversé à l'aide des seuls échantillons de l'expert car ceux-ci ne couvrent qu'une partie trop petite de l'espace d'état.\\
-
-Les approches bayésiennes du type de \cite{ramachandran2007bayesian} nécessitent une connaissance du modèle pour fonctionner, modèle dont nous ne disposons pas.\\
+Cette résolution est très problématique. En effet trouver une politique optimisant une récompense est un sujet occupant un pan entier de la litérature. Particulièrement, l'information nécessaire à cet objectif est bien plus étendue que celle nécessaire au calcul d'uniquement l'attribut moyen de l'expert comme cela est nécessaire à notre algorithme. Comme cela est illustré en section \ref{exp.sec}, l'algorithme d'\citet{abbeel2004apprenticeship} ne permet pas de résoudre le problème du pendule inversé à l'aide des seuls échantillons de l'expert car ceux-ci ne couvrent qu'une partie trop petite de l'espace d'état.\\
 
 Un argument revenant parfois est celui qui consiste à voir en l'expert non pas un acteur optimal mais un acteur optimal par une certaine marge. C'est à dire que l'action choisie par l'expert doit avoir une qualité strictement supérieure à n'importe quelle autre action. Les approches de planification structurée comme \citet{ratliff2006maximum,ratliff2007imitation, ratliff2007boosting, kolter2008hierarchical} permettent d'influer sur cette marge.\\
 
-Particulièrement, notre travail présente des similarités avec celui de \citet{ratliff2006maximum}. Les auteurs présentent une méthode d'ARI en posant le problème sous forme d'un \emph{maximum margin classification problem}. La méthode utilisée pour résoudre ce problème peut être ramenée à un algorithme itératif dans la veine de \cite{abbeel2004apprenticeship}, comme cela est expliqué dans \cite{neu2009training}. Vu à un plus haut niveau d'abstraction, la classification a lieu dans l'espace des trajectoires : à un PDM (entrée à classifier) est associée une politique (classe). Cela impose également un cadre déterministe pour les PDM, l'algorithme de résolution utilisé étant $A^*$.\\
+Particulièrement, notre travail présente des similarités avec celui de \citet{ratliff2006maximum}. Les auteurs présentent une méthode d'ARI en posant le problème sous forme d'un \emph{maximum margin classification problem} dont la fonction de risque est similaire à la nôtre. La méthode utilisée pour résoudre ce problème peut être ramenée à un algorithme itératif dans la veine de \cite{abbeel2004apprenticeship}, comme cela est expliqué dans \cite{neu2009training}. Vu à un plus haut niveau d'abstraction, la classification a lieu dans l'espace des trajectoires : à un PDM (entrée à classifier) est associée une politique (classe). Le cadre applicatif est déterministe, l'algorithme employé pour la résolution des PDM étant $A^*$. Il semble difficile de sortir de ce cadre.
 
-Finalement, dans \citep{ratliff2007imitation} les auteurs utilisent un système de classification multi-classe qui met en jeu une fonction de score. Cette fonction de score $s : X\times Y \rightarrow \mathbb{R}$ est utilisée à chaque état pour prendre une décision de classification i.e. choisir le label (correspondant à une action) $y\in Y$ à appliquer à l'entrée (correspondant à un état) $x\in X$. Notre fonction de risque est similaire à la leur, mais outre la résolution répétée du PDM liée à la manière dont ils minimisent la fonction de risque et dont nous avons déjà parlé, leur approche souffre de ne pas profiter de l'introduction de la structure dont profite la nôtre (Equation \eqref{structure.eqn}).
+Finalement, dans \citep{ratliff2007imitation} les auteurs utilisent un système de classification multi-classe qui met en jeu une fonction de score. Cette fonction de score $s : X\times Y \rightarrow \mathbb{R}$ est utilisée à chaque état pour prendre une décision de classification i.e. choisir le label (correspondant à une action) $y\in Y$ à appliquer à l'entrée (correspondant à un état) $x\in X$. Leur approche souffre de ne pas profiter de l'introduction de la structure dont profite la nôtre (Equation \eqref{structure.eqn}).\\
 
+Notre approche se place en quelque sorte à mi-chemin entre ces deux contributions en proposant d'introduire la structure du PDM (ce que fait la première) au niveau du choix de l'action (niveau d'abstraction de la seconde).
+
+Les approches bayésiennes du type de \cite{ramachandran2007bayesian, boularias2011relative} nécessitent généralement une connaissance du modèle $\{S,A,p,\gamma\}$ ou un simulateur pour fonctionner.
 %%%%%
 \section{Illustration expérimentale}
 \label{exp.sec}
@@ -363,9 +356,9 @@ Finalement, dans \citep{ratliff2007imitation} les auteurs utilisent un système 
 %%%
 \subsection{Description de la tâche}
 %%%
-Le problème du pendule inversé consiste à maintenir en équilibre vertical un pendule à un degré de liberté. Il s'agit d'un problème classique en apprentissage par renforcement. Pour jouer le rôle de notre expert, nous utilisons d'ailleurs la politique trouvée par LSPI, un algorithme de RL décrit par \citet{lagoudakis2003least}. Les différents réglages utilisés, de la valeur de la masse du pendule codée dans notre simulateur jusqu'au choix des fonctions de bases $\phi : S\times A \rightarrow \mathbb{R}^k$ et $\psi : S \rightarrow \mathbb{R}^p$ sont conformes à ce qui est donné dans cette publication. Notamment les fonctions de bases forment un réseau de gaussienne couvrant l'espace d'état à deux dimensions, la première étant la position angulaire du pendule (la verticale correspondant à un angle de valeur nulle) la seconde étant sa vitesse angulaire. On constate que cet espace d'état respecte le critère de Markov dont nous avons vu en section \ref{back.sec} qu'il était nécessaire.\\
+Le problème du pendule inversé consiste à maintenir en équilibre vertical un pendule à un degré de liberté. Il s'agit d'un problème classique en apprentissage par renforcement. Pour jouer le rôle de notre expert, nous utilisons d'ailleurs la politique trouvée par LSPI, un algorithme de RL décrit par \citet{lagoudakis2003least}. Les différents réglages utilisés, de la valeur de la masse du pendule codée dans notre simulateur jusqu'au choix des fonctions de base sont conformes à ce qui est donné dans cette publication. Notamment les fonctions de bases forment un réseau de gaussienne couvrant l'espace d'état à deux dimensions, la première étant la position angulaire du pendule (la verticale correspondant à un angle de valeur nulle) la seconde étant sa vitesse angulaire.\\
 
-La politique optimisant la fonction de récompense donnée figure \ref{trueR.fig} parvient systématiquement à maintenir le pendule en équilibre durant 3000 pas de temps. Ces derniers ayant une valeur d'un dixième de seconde, cela signifie que nous interrompons l'expert après 5 minutes de contrôle sans chute du pendule.\\
+La politique optimisant la fonction de récompense donnée Figure \ref{onlyFig.fig} (a) parvient systématiquement à maintenir le pendule en équilibre durant 3000 pas de temps. Ces derniers ayant une valeur d'un dixième de seconde, cela signifie que nous interrompons l'expert après 5 minutes de contrôle sans chute du pendule.\\
 
 Le but de cette expérience est de montrer que notre algorithme est capable, à partir des seules transitions fournies par l'expert et de la définition des fonctions de bases, de retrouver une récompense telle qu'un agent entraîné sur cette récompense puisse lui aussi faire balancer le pendule durant 5 minutes sans échec. Cela n'est pas trivial étant donné que l'espace d'état est continu et que les données fournies par l'expert n'en couvrent qu'une petite partie (correspondant à la position verticale et son voisinage proche).\\
 
@@ -374,51 +367,50 @@ En effet, comme cela a été montré dans \citep{klein2011batch}, à moins de fo
 %%%
 \subsection{Illustration des résultats}
 %%%
-\begin{figure}
-  \begin{minipage}[t]{.5\linewidth}
-    \begin{center}
-       \includegraphics[width=1.3\textwidth]{LAFEM_Exp3_true_R.pdf}
-       \caption{}
-       \label{trueR.fig}
-    \end{center}
+
+\begin{figure}[tb]
+%
+\begin{minipage}[b]{.5\linewidth}
+  \centering
+  \centerline{\includegraphics[width=1.2\linewidth]{LAFEM_Exp3_true_R.pdf}}
+  \centerline{(a) Récompense de l'expert}%\medskip
 \end{minipage}
 \hfill
-\begin{minipage}[t]{.5\linewidth}
-    \begin{center}
-       \includegraphics[width=1.3\textwidth]{LAFEM_Exp3_lafem_R.pdf}
-       \caption{}
-       \label{lafemR.fig}
-    \end{center}
-\end{minipage}\\
-\begin{minipage}[t]{.5\linewidth}
-    \begin{center}
-       \includegraphics[width=1.3\textwidth]{LAFEM_Exp3_Vexpert.pdf}
-       \caption{}
-       \label{trueV.fig}
-    \end{center}
+\begin{minipage}[b]{.5\linewidth}
+  \centering
+  \centerline{\includegraphics[width=1.2\linewidth]{LAFEM_Exp3_lafem_R.pdf}}
+  \centerline{(b) Récompense trouvée}%\medskip
+\end{minipage}
+\begin{minipage}[b]{.5\linewidth}
+  \centering
+  \centerline{\includegraphics[width=1.2\linewidth]{LAFEM_Exp3_Vexpert.pdf}}
+  \centerline{(c) Fonction de valeur de l'expert}%\medskip
 \end{minipage}
 \hfill
-\begin{minipage}[t]{.5\linewidth}
-    \begin{center}
-       \includegraphics[width=1.3\textwidth]{LAFEM_Exp3_Vagent.pdf}
-       \caption{}
-       \label{lafemV.fig}
-    \end{center}
-\end{minipage}\\
-\caption*{Illustration de l'application de notre algorithme au problème du pendule inversé. Un agent entraîné grâce à un algorithme d'apprentissage par renforcement sur la récompense de la Figure \ref{trueR.fig} parvient à maintenir le pendule en équilibre durant 5 minutes sans échec. Il joue le rôle de l'expert. La fonction de valeur de cet expert est illustrée Figure \ref{trueV.fig}. On constate la similarité avec la Figure \ref{lafemV.fig}, fonction de valeur de l'agent qui lui a été entraîné sur la récompense trouvée par notre algorithme, Figure \ref{lafemR.fig}. Bien que les échantillons fournis par l'expert (en vert sur la Figure \ref{lafemR.fig}) ne couvrent qu'une petite partie de l'espace d'état (position angulaire du pendule en abscisse, vitesse angulaire en ordonnées) notre algorithme parvient à l'aide de ces seules données à trouver une récompense justifiant le comportement de l'expert sur tout l'espace d'état.}
+\begin{minipage}[b]{.5\linewidth}
+  \centering
+  \centerline{\includegraphics[width=1.2\linewidth]{LAFEM_Exp3_Vagent.pdf}}
+  \centerline{(d) Fonction de valeur de l'agent}%\medskip
+\end{minipage}
+%
+\caption{Résultats fournis par notre algorithme sur le problème du pendule inversé.}
+\label{onlyFig.fig}
+%
+\vspace{-5pt}
 \end{figure}
+
 Afin d'étudier le comportement de notre algorithme, nous avons fait générer à l'expert une base de données $D_E$ de transitions contenant 10 trajectoires de 300 transitions chacune. La fonction $l$ fut définie sur les états présents dans $D_E$ telle que $l(s,a) = 0$ si $a=\pi_E(s)$, $1$ sinon. Le pas de temps est constant à $\alpha(t) = 0.1, \forall t$ et le nombre d'itérations est de $T=20$. Le vecteur initial $\theta_0$ fut fixé à $[-1...-1]^T$, la récompense étant paramétrée à l'aide du vecteur d'attribut $\psi : S \rightarrow \mathbb{R}^p$ correspondant au mélange de gaussiennes défini dans \cite{lagoudakis2003least}. Pour l'approximation de l'attribut vectoriel moyen de l'expert, c'est l'algorithme LSTD$\mu$ qui fut employé.\\
 
 
-Si la fonction de récompense trouvée par LAFEM (figure \ref{lafemR.fig}) diffère de celle fournie à l'expert (figure \ref{trueR.fig}) on constate en revanche que les fonctions de valeurs sont très similaires (figures \ref{trueV.fig} et \ref{lafemV.fig}). Cela est une illustration du fait que le problème de l'ARI est mal posé en ceci qu'il n'y a pas qu'une seule récompense pouvant expliquer une politique.\\
+Si la fonction de récompense trouvée par LAFEM (figure \ref{onlyFig.fig} (b)) diffère de celle fournie à l'expert (figure \ref{onlyFig.fig} (a)) on constate en revanche que les fonctions de valeurs sont très similaires (figures \ref{onlyFig.fig} (c) et \ref{onlyFig.fig} (d)). Cela est une illustration du fait que le problème de l'ARI est mal posé en ceci qu'il n'y a pas qu'une seule récompense pouvant expliquer une politique.\\
 
-Avec le nombre d'échantillons fournis par l'expert (3000 en 10 trajectoires de 300 transitions chacune), l'agent parvient systématiquement à maintenir le pendule en équilibre durant 5 minutes, ce qui est rappelons le notre critère de réussite.\\
+Avec le nombre d'échantillons fournis par l'expert (3000 en 10 trajectoires de 300 transitions chacune), l'agent parvient systématiquement à maintenir le pendule en équilibre durant 5 minutes, ce qui est, rappelons-le, notre critère de réussite.\\
 
-Deux éléments méritent d'être notés. Tout d'abord la faible couverture de l'espace d'état offerte par les échantillons de l'expert. Ceux-ci sont portés en vert sur la Figure \ref{lafemR.fig} et l'on constate qu'ils n'occupent qu'une toute petite partie de l'espace : celle dans laquelle le pendule est proche de la verticale. En l'absence de données dans le reste de l'espace d'état il n'est pas possible de pouvoir y inférer avec certitude la récompense. Le second point à noter est que la "vraie" récompense ne se trouve pas dans l'espace d'hypothèse que notre algorithme explore, en effet les attributs proposés dans le problème du pendule inversé par \citet{lagoudakis2003least} et utilisés par nous paramétrer la récompense consistent en un maillage de gaussiennes qui ne peuvent qu'approximer la fonction de récompense utilisée sans l'atteindre.\\
+Deux éléments méritent d'être notés. Tout d'abord la faible couverture de l'espace d'état offerte par les échantillons de l'expert. Ceux-ci sont portés en vert sur la Figure \ref{onlyFig.fig} (b) et l'on constate qu'ils n'occupent qu'une toute petite partie de l'espace : celle dans laquelle le pendule est proche de la verticale. En l'absence de données dans le reste de l'espace d'état il n'est pas possible de pouvoir y inférer avec certitude la récompense. Le second point à noter est que la "vraie" récompense ne se trouve pas dans l'espace d'hypothèse que notre algorithme explore, en effet les attributs proposés dans le problème du pendule inversé par \citet{lagoudakis2003least} et utilisés par nous paramétrer la récompense consistent en un maillage de gaussiennes qui ne peuvent qu'approximer la fonction de récompense utilisée sans l'atteindre.\\
 
-Malgré ces deux difficultés, notre algorithme parvient comme nous l'avons dit à extraire une récompense qui permet à un agent d'obtenir des performances similaires à celles de l'expert.\\
+Malgré ces deux difficultés, notre algorithme parvient, comme nous l'avons dit, à extraire une récompense qui permet à un agent d'obtenir des performances similaires à celles de l'expert.\\
 
-La différence dans les amplitudes des récompenses et des fonctions de valeurs n'est pas un problème, c'est en effet un résultat connu en apprentissage par renforcement que multiplier fonction de récompense ou fonction de valeur par une constante positive n'impacte pas les politiques.
+La différence dans les amplitudes des récompenses et des fonctions de valeurs n'est pas un problème, c'est en effet un résultat connu en apprentissage par renforcement qu'appliquer une transformation affine à la fonction de récompense ou la fonction de valeur n'impacte pas les politiques.
 \section{Conclusion and future work}
 
 L'algorithme présenté dans cette publication lève les problèmes les plus contraignants de l'apprentissage par renforcement inverse. En rendant la résolution du problème inverse indépendante de celle du problème direct, nous sommes en mesure d'inférer une récompense cohérente avec le comportement d'un expert en mode purement \emph{batch}.\\
