Gagner de la place en modifiant les refs

--- a/klein2012/Biblio.bib
+++ b/klein2012/Biblio.bib
@@ -7,6 +7,14 @@
 
 %% Saved with string encoding Unicode (UTF-8)
 
+@article{melo2010learning,
+  title={Learning from demonstration using MDP induced metrics},
+  author={Melo, F. and Lopes, M.},
+  journal={Machine Learning and Knowledge Discovery in Databases},
+  pages={385--401},
+  year={2010},
+  publisher={Springer}
+}
 
 
 @conference{aghasadeghi2011maximum,
@@ -15,7 +23,7 @@
 	Cites3 = {todorov2004optimality,kording2004loss,krstic1999inverse,abbeel2010autonomous,dvijotham2010inverse,chen2000survey,darroch1972generalized,kalakrishnan2010inverse,ijspeert2003learning},
 	Date-Added = {2011-10-21 08:33:04 +0000},
 	Date-Modified = {2011-11-02 10:37:29 +0000},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Keywords = {IRL},
 	Title = {Maximum Entropy Inverse Reinforcement Learning in Continuous State Spaces with Path Integrals},
 	Year = {2011},
@@ -1319,7 +1327,7 @@
 
 @inproceedings{ravindran2003relativized,
 	Author = {Ravindran, B. and Barto, A.G.},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Date-Added = {2011-10-12 07:33:04 +0000},
 	Date-Modified = {2011-10-12 07:33:04 +0000},
 	Number = {2},
@@ -1608,7 +1616,7 @@
 
 @inproceedings{wiewiora2003principled,
 	Author = {Wiewiora, E. and Cottrell, G. and Elkan, C.},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Date-Added = {2011-10-11 07:44:27 +0000},
 	Date-Modified = {2011-10-11 07:44:27 +0000},
 	Number = {2},
@@ -1837,7 +1845,7 @@
 
 @inproceedings{mcmahan2003planning,
 	Author = {McMahan, H.B. and Gordon, G.J. and Blum, A.},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Date-Added = {2011-10-10 09:40:19 +0000},
 	Date-Modified = {2011-10-10 09:40:19 +0000},
 	Number = {2},
@@ -2952,7 +2960,7 @@
 
 @inproceedings{stone2001scaling,
 	Author = {Stone, P. and Sutton, R.S.},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Date-Added = {2011-10-04 13:13:44 +0000},
 	Date-Modified = {2011-10-04 13:13:44 +0000},
 	
@@ -3010,7 +3018,7 @@
 
 @inproceedings{freund1996experiments,
 	Author = {Freund, Y. and Schapire, R.E.},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Date-Added = {2011-10-04 13:03:23 +0000},
 	Date-Modified = {2011-10-04 13:03:23 +0000},
 	
@@ -5218,7 +5226,7 @@
 
 @inproceedings{herger1994considering,
 	Author = {Herger, M.},
-	Booktitle = {Proceedings of the 11th International Conference on Machine Learning (ICML)},
+	Booktitle = {Proceedings of the 11th Proc. ICML},
 	Date-Added = {2011-09-26 08:22:41 +0000},
 	Date-Modified = {2011-09-26 08:22:41 +0000},
 	Pages = {105--111},
@@ -5326,7 +5334,7 @@
 
 @conference{klein2011batch,
 	Author = {Edouard Klein and Matthieu Geist and Olivier Pietquin},
-booktitle = {{Proceedings of the European Workshop on Reinforcement Learning (EWRL 2011)}},
+booktitle = {{Proc. EWRL 2011)}},
 publisher = {Springer Verlag - Heidelberg Berlin},
 month = {september},
 series = {Lecture Notes in Computer Science (LNCS)},
@@ -5403,7 +5411,7 @@ series = {Lecture Notes in Computer Science (LNCS)},
 	Cites3 = {ratliff2009learning,ratliff2006maximum,ramachandran2007bayesian,lopes2009active,neu2007apprenticeship,syed2008apprenticeship,abbeel2010autonomous},
 	Date-Added = {2011-07-17 12:49:57 +0200},
 	Date-Modified = {2011-10-21 08:25:29 +0000},
-	Journal = {International Conference on Automated Planning and Scheduling (ICAPS)},
+	Journal = {Proc. ICAPS},
 	Keywords = {IRL,Toto},
 	Pages = {20--27},
 	Publisher = {AAAI Press},
@@ -5515,7 +5523,7 @@ series = {Lecture Notes in Computer Science (LNCS)},
 
 @inproceedings{chajewska2001learning,
 	Author = {Chajewska, U. and Koller, D. and Ormoneit, D.},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Cites1 = {applegate1991sampling},
 	Cites2 = {ng2000algorithms},
 	Cites3 = {von1944theory,fromberg1989methodology,chajewska2000utilities,pearl1988probabilistic,keeney1976decision,selten1991game,fudenberg1998theory,barany1987computing},
@@ -5712,7 +5720,7 @@ series = {Lecture Notes in Computer Science (LNCS)},
 
 @conference{kolter2008hierarchical,
 	Author = {Kolter, J.Z. and Abbeel, P. and Ng, A.Y.},
-	Booktitle = {Neural information processing systems},
+	Booktitle = {Proc. NIPS},
 	Date-Added = {2011-03-28 14:55:17 +0200},
 	Date-Modified = {2011-03-28 14:55:17 +0200},
 	
@@ -5756,7 +5764,7 @@ series = {Lecture Notes in Computer Science (LNCS)},
 
 @conference{syed2008apprenticeship,
 	Author = {Syed, U. and Bowling, M. and Schapire, R.E.},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Cites1 = {abbeel2004apprenticeship,syed2008game},
 	Cites2 = {ratliff2006maximum},
 	Cites3 = {puterman1994markov,feinberg2002handbook,fang1993linear,grant2008cvx,johanson2008computing,wang2008stable},
@@ -6293,7 +6301,7 @@ series = {Lecture Notes in Computer Science (LNCS)},
 
 @conference{munos2003error,
 	Author = {Munos, R.},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Date-Added = {2010-12-03 11:30:18 +0100},
 	Date-Modified = {2010-12-03 11:30:18 +0100},
 	Number = {2},
@@ -6357,7 +6365,7 @@ series = {Lecture Notes in Computer Science (LNCS)},
 
 @conference{precup2001off,
 	Author = {Precup, D. and Sutton, R.S. and Dasgupta, S.},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Date-Added = {2010-12-03 10:21:28 +0100},
 	Date-Modified = {2010-12-03 10:21:28 +0100},
 	
@@ -6515,7 +6523,7 @@ series = {Lecture Notes in Computer Science (LNCS)},
 	Comprehension = {1},
 	Date-Added = {2010-09-09 11:33:28 +0200},
 	Date-Modified = {2011-10-19 10:07:12 +0000},
-	Journal = {Annual Conference on Neural Information Processing Systems (NIPS)},
+	Journal = {Proc. NIPS},
 	Keywords = {IRL},
 	Pages = {1449--1456},
 	
@@ -6687,7 +6695,7 @@ series = {Lecture Notes in Computer Science (LNCS)},
 
 @conference{littman1995learning,
 	Author = {Littman, M.L. and Cassandra, A.R. and Pack Kaelbling, L.},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Date-Added = {2010-09-08 14:11:30 +0200},
 	Date-Modified = {2010-09-08 14:11:30 +0200},
 	
@@ -6725,7 +6733,7 @@ series = {Lecture Notes in Computer Science (LNCS)},
 
 @conference{strens2000bayesian,
 	Author = {Strens, M.},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Date-Added = {2010-09-07 12:06:02 +0200},
 	Date-Modified = {2010-09-07 12:06:02 +0200},
 	
@@ -6980,7 +6988,7 @@ series = {Lecture Notes in Computer Science (LNCS)},
 	Cites3 = {hassani1999mathematical,chestnutt2005footstep,tsochantaridis2006large,taskar2003max,taskar2005learning},
 	Date-Added = {2010-09-03 10:37:47 +0200},
 	Date-Modified = {2011-10-19 10:03:55 +0000},
-	Journal = {Advances in Neural Information Processing Systems},
+	Journal = {Proc. NIPS},
 	Keywords = {IRL},
 	Pages = {1153},
 	
@@ -7034,7 +7042,7 @@ series = {Lecture Notes in Computer Science (LNCS)},
 	Annote = {Cit{\'e} dans \cite{ziebart2008maximum} :
 	"This problem is known as label bias in the Conditonal Random Field literature."},
 	Author = {Lafferty, J. and McCallum, A. and Pereira, F.},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Date-Added = {2010-09-02 15:05:11 +0200},
 	Date-Modified = {2010-09-02 15:05:18 +0200},
 	
@@ -7111,7 +7119,7 @@ series = {Lecture Notes in Computer Science (LNCS)},
 	"We discuss several additional advantages in modeling behavior that this technique has over existing approaches to inverse reinforcement learning."
 Cit{\'e} dans \cite{ratliff2007boosting}.},
 	Author = {Ratliff, N.D. and Bagnell, J.A. and Zinkevich, M.A.},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Cites1 = {taskar2005learning,nedic2000convergence},
 	Cites2 = {pomerleau1989alvinn,lecun2006off,abbeel2004apprenticeship},
 	Cites3 = {tsochantaridis2006large,taskar2003max,rifkin2003regularized,hebert1998mobility,puterman1994markov,shor1985minimization},
@@ -7127,7 +7135,7 @@ Cit{\'e} dans \cite{ratliff2007boosting}.},
 
 @conference{ziebart2008maximum,
 	Author = {Ziebart, B.D. and Maas, A. and Bagnell, J.A. and Dey, A.K.},
-	Booktitle = {AAAI Conference on Artificial Intelligence (AAAI)},
+	Booktitle = {Proc. AAAI},
 	Cites1 = {jaynes1957information},
 	Cites2 = {ratliff2006maximum,ramachandran2007bayesian,neu2007apprenticeship,abbeel2004apprenticeship,ng1999policy,liao2007learning},
 	Cites3 = {lafferty2001conditional,dudik2006maximum,krumm2006predestination,letchner2006trip},
@@ -7336,7 +7344,7 @@ Cit{\'e} dans \cite{ratliff2007boosting}.},
 Cit{\'e} dans \cite{ziebart2008maximum} :
 	"Each policy can be optimal for many reward functions and many policies lead to the same feature counts."},
 	Author = {Ng, A.Y. and Russell, S.},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Cited-By = {abbeel2004apprenticeship,ziebart2008maximum},
 	Cites1 = {russell1998learning},
 	Cites3 = {sutton1998reinforcement,bertsekas1996neuro,doya1995novel,montague1995bee,boyd1994linear,rust1994people,sargent1978estimation,keeney1976decision,touretzky1997operant,schmajuk1997escape,watkins1989models},
@@ -7356,7 +7364,7 @@ Cit{\'e} dans \cite{ziebart2008maximum} :
 	Annote = {Cit{\'e} de \cite{abbeel2004apprenticeship} :
 	"They used a reward function that quadratically penalizes deviation from the desired trajectory."},
 	Author = {Atkeson, C.G. and Schaal, S.},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Date-Added = {2010-09-01 17:08:28 +0200},
 	Date-Modified = {2011-10-12 07:28:01 +0000},
 	Keywords = {Toto},
@@ -7429,7 +7437,7 @@ Cit{\'e} dans \cite{ziebart2008maximum} :
 Cit{\'e} par \cite{ng2000algorithms} :
 	"Can we design IRL algorithm that design easy reward functions ?"},
 	Author = {Ng, A.Y. and Harada, D. and Russell, S.},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Cites3 = {von1944theory,russell1998learning,rust1994people,dorigo1994robot,mataric1994reward,saksida1997shaping,randlov1998learning,baird1994reinforcement,bertsekas1996neuro,sutton1998reinforcement,bertsekas2001dynamic,hernandez1989adaptive,bertsekas1978stochastic},
 	Date-Added = {2010-09-01 15:48:32 +0200},
 	Date-Modified = {2011-10-19 07:55:35 +0000},
@@ -7443,7 +7451,7 @@ Cit{\'e} par \cite{ng2000algorithms} :
 
 @conference{abbeel2004apprenticeship,
 	Author = {Abbeel, P. and Ng, A.Y.},
-	Booktitle = {International Conference on Machine Learning (ICML)},
+	Booktitle = {Proc. ICML},
 	Cited-By = {ziebart2008maximum},
 	Cites1 = {ng2000algorithms},
 	Cites2 = {atkeson1997robot,pomerleau1989alvinn,amit2002learning,demiris1994robot,kuniyoshi1994learning,sammut1992learning,ng1999policy},
